# PointValueStoreConnector/PointsController.cs
@@ -13,7 +13,7 @@ public class PointsController(HomeSystemContext context, PointValueStore pointVa
     private readonly static CultureInfo InvariantCulture = CultureInfo.InvariantCulture;
 
     [HttpGet("{pointId}/values")]
-    public async Task<ActionResult<ResponseValueContainerDto>> GetNumericValue(int pointId, DateOnly from, DateOnly upTo)
+    public async Task<ActionResult<ResponseValueContainerDto>> GetNumericValue(int pointId, DateOnly from, DateOnly upTo, int? resolution = null)
     {
         var devicePoint = await context.DevicePoints
             .Include(x => x.DataType)
@@ -29,7 +29,7 @@ public class PointsController(HomeSystemContext context, PointValueStore pointVa
 
         return new ResponseValueContainerDto
         {
-            Values = pointValueStore.ReadNumericValues(devicePoint.DeviceId, devicePoint.Id, from, upTo).Select(x =>
+            Values = pointValueStore.ReadNumericValues(devicePoint.DeviceId, devicePoint.Id, from, upTo, resolution: resolution).Select(x =>
             {
                 var value = x.Item2;
                 string? stringValue = null;
